# test

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
les01/: garage.py  main.py
les01/app/: car.py  garage.py  store.py
les01/tests/: steps.py
les01/tests/feature/: garage.feature
les01/tests/utils/: test_car.py  test_garage.py
les02/: decorator.py  factory.py  factory_method.py  page_element.py  page_object.py  singleton.py  steps.py  strategy.py
les03/: commands.sql  docker-compose.yml  postgres.env
les04/: main.py
les05/: arguments.py
my_tests/: my_test1.py  name_test.py  test_chrome.py  test_unitest.py
