[tool.poetry]
name = "DW"
version = "0.1.0"
description = ""
authors = ["rkavlev <r.kavlev@ritm.media>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.0"
pytest-bdd = "^6.1.1"
flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
